<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:contentDescription="@string/appName"/>
    
    <EditText
        android:id="@+id/emailField"
        style="@style/EditText.Base"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/usernameOrEmailPlaceholder" />

    <EditText
        android:id="@+id/passwordField"
        style="@style/EditText.Base"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/passwordPlaceholder"
        android:drawableLeft="@drawable/ic_key"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/loginButton"
        style="@style/ActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/registerButton"
        style="@style/PassiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register" />

</LinearLayout>