<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/userProfilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_profile_picture"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/userUsername"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleUsername"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/userProfilePicture"/>

        <TextView
            android:id="@+id/videoCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/sampleVideoCategory"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/videoCategoryLabel"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryLabel"
            android:layout_toLeftOf="@id/videoCategory"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#000000">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <ImageView
            android:id="@+id/userVideoThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"/>

        <ImageButton
            android:id="@+id/playVideoButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_play"
            android:background="#0000"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_not_liked"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/videoLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:layout_centerVertical="true"
            android:text="@string/sampleVideoLikes"/>

        <TextView
            android:id="@+id/videoViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/sampleVideoViews"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/sampleVideoTitle"/>

        <TextView
            android:id="@+id/videoDescription"
            android:layout_marginTop="10dp"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampleBio" />

    </LinearLayout>

</LinearLayout>